# firstdevops-demo

./: main.py  pyproject.toml  setup.py
pytest_demo/: test_math.py
pytest_demo/allure-results/: 83689061-5225-4db2-914f-14e9c67eeef9-result.json  c9f2b729-3ac4-4b44-9ad9-4ad18cc2f637-result.json  effe8cf1-48c3-4d72-8650-b0ef197f67c8-result.json
