[project]
name='firstdevopsdemo'
version = "0.1.0"
description = ""
authors = [
    {name = "Atchaya T",email = "atchaya.602@gmail.com"}
]
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "firstdevopsdemo"}]

[build-system]
requires = ["poetry-core>=2.0.0,<=3.13.0"]
build-backend = "poetry.core.masonry.api"
